kustomize/base/backoffice/backoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice
  labels:
    app: backoffice
    role: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice
      role: application
  template:
    metadata:
      labels:
        app: backoffice
        role: application
    spec:
      containers:
        - name: backoffice
          image: danielsanchez18/backoffice-prueba-sistemas:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /livez
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /livez
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
